gl31-master/src/test/deca/syntax/valid/sansobjet/select_expr.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a;
    // dot pas dans sans objet
    //a.(true || false);
}
