gl31-master/src/test/deca/syntax/invalid/sansobjet/expr_missing.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 10 : Erreur, expr. manquante après '='
//
// Historique:
//    cree le 18/01/2021
{
    int a = ;
}
